# libks

./: .drone.yml  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debian10  Dockerfile.debian11  README  build.sh  build_dependencies.sh  copyright  libks.pc.in  libks.spec  run_tests.sh  scan_build.sh  src_tarball.sh  test.sh
.github/docker/centos/7/amd64/: Dockerfile
.github/docker/debian/bookworm/amd64/: Dockerfile
.github/docker/debian/bookworm/arm32v7/: Dockerfile
.github/docker/debian/bookworm/arm64v8/: Dockerfile
.github/docker/debian/bullseye/amd64/: Dockerfile
.github/docker/debian/bullseye/arm32v7/: Dockerfile
.github/docker/debian/bullseye/arm64v8/: Dockerfile
.github/docker/debian/buster/amd64/: Dockerfile
.github/docker/debian/buster/arm32v7/: Dockerfile
.github/docker/debian/buster/arm64v8/: Dockerfile
.github/docker/debian/trixie/amd64/: Dockerfile
.github/docker/debian/trixie/arm32v7/: Dockerfile
.github/docker/debian/trixie/arm64v8/: Dockerfile
.github/workflows/: build.yml  ci.yml  cicd.yml  macos.yml  windows.yml
KSTest/: CMakeLists.txt  KSTest.hpp  main.cpp
KSTest/cases/: handle.cpp  json.cpp  thread.cpp  throughput.cpp
cmake/: AddLibBacktrace.cmake  FindConfig.cmake  FindConfigCpp.cmake  FindLibM.cmake  FindPCRE.cmake  FindUUID.cmake  ksutil.cmake
src/: .directory  ks.c  ks_acl.c  ks_base64.c  ks_buffer.c  ks_config.c  ks_debug.c  ks_dso.c  ks_env.c  ks_faktory.c  ks_handle.c  ks_hash.c  ks_hep.c  ks_json.c  ks_json_check.c  ks_json_schema.cpp  ks_json_schema_pure.c  ks_lfq.c  ks_log.c  ks_metrics.c  ks_mutex.c  ks_pool.c  ks_printf.c  ks_q.c  ks_resp.c  ks_rng.c  ks_sb.c  ks_socket.c  ks_ssl.c  ks_string.c  ks_thread.c  ks_thread_pool.c  ks_throughput.c  ks_time.c  ks_tls.c  ks_utf8.c  ks_uuid.c  kws.c  simclist.c
src/include/cJSON/: cJSON.c  cJSON.h  cJSON_Utils.c  cJSON_Utils.h
src/include/libks/: ks.h  ks_acl.h  ks_atomic.h  ks_base64.h  ks_buffer.h  ks_config.h  ks_debug.h  ks_defines.h.in  ks_dso.h  ks_env.h  ks_faktory.h  ks_handle.h  ks_hash.h  ks_hep.h  ks_json.h  ks_json_check.h  ks_json_schema.h  ks_json_schema_pure.h  ks_lfq.h  ks_log.h  ks_metrics.h  ks_platform.h  ks_pool.h  ks_printf.h  ks_q.h  ks_resp.h  ks_rng.h  ks_sb.h  ks_socket.h  ks_ssl.h  ks_string.h  ks_thread_pool.h  ks_threadmutex.h  ks_throughput.h  ks_time.h  ks_tls.h  ks_types.h  ks_utf8.h  ks_uuid.h  kws.h  (+1 more)
src/include/libks/internal/: ks_handle.h  ks_hep.h  ks_json_schema.h  ks_mutex.h  ks_pool.h  ks_thread.h  ks_throughput.h
tests/: .gitignore  CMakeLists.txt  testacl.c  testhandle.c  testhash.c  testhttp.c  testjson.c  testjsonschema.c  testjsonschemapure.c  testkwscancel.c  testlfq.c  testlog.c  testpolling.c  testpools.c  testq.c  testrealloc.c  testsock.c  testsock2.c  teststring.c  testthreadmutex.c  testthreadpools.c  testtime.c  testtls.c  testwebsock.c  testwebsock2.c
win/: .gitignore  basedir.props  build.cmd  buildpackages.task  downloadpackage.task  libks-version.props  libks.2017.sln  libks.2017.vcxproj  libks.sln  libks.vcxproj  openssl-version.props  openssl.download.target
